--- a/singolo1.css
+++ b/singolo1.css
@@ -83,6 +83,12 @@ body {
     background-color: #ef6c64;
 }
 
+.arrow {
+    width: 30px;
+    height: 50px;
+    text-align: center;
+}
+
 .arrow-left {
 
 }
@@ -107,7 +113,8 @@ body {
 }
 
 .service-information {
-    padding: 65px 40px 0 40px;
+    height: 150px;
+    padding: 34px 40px 0 40px;
 }
 
 .gray {
@@ -119,15 +126,21 @@ body {
 }
 
 #service-header {
+    margin: 0;
+    padding-top: 25px;
     text-transform: capitalize;
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     font-weight: 900;
+    letter-spacing: -0.02rem;
 }
 
 #service-content {
+    margin: 0;
+    padding-top: 18px;
     font-size: 1.1rem;
     font-weight: 300;
     line-height: 30px;
+    letter-spacing: 0.02rem;
 }
 
 
@@ -135,8 +148,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    margin: auto 40px auto 40px;
-    border: 1px solid #ef6c64;
+    margin: 15px 40px auto 40px;
 }
 
 .service-menu {
@@ -145,20 +157,27 @@ body {
     grid-template-areas: 
         "icon header"
         "icon text";
-    border: 1px solid #666d89;
+    height: 124px;
+    width: 320px;
 }
 
 .service-menu h4 {
+    height: 40px;
     grid-area: header;
+    margin: 0;
+    padding-top: 16px;
+    padding-left: 18px;
     text-transform: capitalize;
     font-size: 1.1rem;
-    border: 1px solid #4cff00;
+    font-weight: 900;
+    text-align: left;
+    
 }
 
 .service-menu p {
+    margin: 0;
     grid-area: text;
     font-size: 0.8rem;
-    border: 1px solid #0094ff;
 }
 
 .service__icon {
