--- a/singolo1.css
+++ b/singolo1.css
@@ -45,8 +45,12 @@ body {
 
 .navigation-menu:hover {
     cursor: pointer;
-    font-weight: 900;
+    transform: scale()
 }
+
+    .navigation-menu:active {
+        color: #f06c64;
+    }
 
 .logo {
     position: relative;
@@ -102,6 +106,53 @@ body {
 
 .arrow-right:hover {
     cursor: pointer;
+}
+
+.phone {
+    width: 240px;
+    height: 483px;
+}
+
+.shadow {
+    position: absolute;
+    z-index: 5;
+}
+
+.base {
+    position: absolute;
+    z-index: 10;
+}
+
+.screen {
+    position: absolute;
+    z-index: 20;
+    width: 188px;
+    height: 333px;
+    overflow: hidden;
+}
+
+.screen-vertical {
+    margin-top: 65px;
+    margin-left: 14px;
+}
+
+.screen-horizontal {
+    top: 0;
+    margin-top: 90px;
+    margin-left: 14px;
+}
+
+.horizontal {
+    position: relative;
+    top: 25px;
+}
+
+.rotate-90-degree {
+    transform: rotate(90deg);
+}
+
+.rotateY-180-degree {
+    transform: rotateY(180deg);
 }
 
 .services {
