--- a/singolo1.css
+++ b/singolo1.css
@@ -3,36 +3,36 @@
 }
 
 body {
-    margin: 0;
     width: 1020px;
     height: auto;
+    margin: 0 auto;
     font-size: 10px;
 }
 
 .header {
     position: relative;
     align-items: center;
-    margin: auto;
     height: 89px;
-    background-color: #2d303a;
-    color: #ffffff;
+    margin: auto;
     font-family: Lato, Verdana, sans-serif;
     text-transform: uppercase;
+    color: #ffffff;
+    background-color: #2d303a;
 }
 
 .container {
-    height: inherit;
-    align-items: center;
     display: flex;
     justify-content: space-between;
+    height: inherit;
+    align-items: center;
 }
 
 .navigation {
     display: grid;
     grid-template-columns: 50px 85px 95px 75px 85px;
-    padding-left: 0;
     margin-top: 25px;
     margin-right: 30px;
+    padding-left: 0;
 }
 
 #home {
@@ -60,14 +60,14 @@ body {
 }
 
 .navigation li:not(.home):before {
+    padding-right: 14px;
     content: '\2027';
     color: #767e9e;
-    padding-right: 14px;
 }
 
 .navigation-menu {
-    height: 20px;
     width: auto;
+    height: 20px;
     font-size: 1.2em;
     font-weight: 700;
     letter-spacing: -0.03em;
@@ -95,8 +95,8 @@ body {
 }
 
 .line-bottom {
-    margin: 0 auto 0 auto;
     height: 6px;
+    margin: 0 auto 0 auto;
     border: none;
 }
 
@@ -109,10 +109,10 @@ body {
 }
 
 .slider {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 3fr 6fr 1fr;
     align-items: center;
-    position: relative;
     height: 594px;
     background-color: #ef6c64;
 }
@@ -143,13 +143,13 @@ body {
 }
 
 .phone-vertical {
-    margin-left: 19px;
     margin-top: -4px;
+    margin-left: 19px;
 }
 
 .phone-horizontal {
-    margin-left: 175px;
     margin-top: -6px;
+    margin-left: 175px;
 }
 
 .shadow {
@@ -209,10 +209,10 @@ body {
 
 .services {
     position: relative;
-    margin-top: 0;
     height: 494px;
-    background-color: #f2f2f2;
+    margin-top: 0;
     font-family: Lato, Verdana, sans-serif;
+    background-color: #f2f2f2;
 }
 
 .service-information {
@@ -231,16 +231,16 @@ body {
 #service-header {
     margin: 0;
     padding-top: 25px;
-    text-transform: capitalize;
     font-size: 1.9rem;
     font-weight: 900;
     letter-spacing: -0.02rem;
+    text-transform: capitalize;
 }
 
 #service-content {
+    height: 55px;
     margin: 0;
     padding-top: 18px;
-    height: 55px;
     font-size: 1.1rem;
     font-weight: 300;
     line-height: 30px;
@@ -260,26 +260,26 @@ body {
     display: grid;
     grid-template: 1fr 3fr / 1fr 4fr;
     grid-template-areas: "icon header" "icon text";
-    height: 124px;
     width: 320px;
+    height: 124px;
 }
 
 .service-menu h4 {
-    height: 30px;
     grid-area: header;
+    height: 30px;
     margin: 0;
     padding-top: 16px;
     padding-left: 16px;
-    text-transform: capitalize;
     font-size: 1.9em;
     font-weight: 900;
     text-align: left;
     letter-spacing: -0.035em;
+    text-transform: capitalize;
 }
 
 .service-menu p {
-    margin: 1px 15px 15px 16px;
     grid-area: text;
+    margin: 1px 15px 15px 16px;
     font-size: 1.2em;
     line-height: 1.8em;
     letter-spacing: 0.01em;
@@ -289,13 +289,13 @@ body {
 
 .service__icon {
     grid-area: icon;
-    height: 55px;
     width: 55px;
+    height: 55px;
     margin-top: 20px;
-    border: 2px solid;
-    border-radius: 100%;
     text-align: center;
     color: #666d89;
+    border: 2px solid;
+    border-radius: 100%;
 }
 
 .service__icon img {
