--- a/singolo2.css
+++ b/singolo2.css
@@ -123,7 +123,7 @@ body {
 .about-us-content {
     position: relative;
     top: 60px;
-    margin-left: 40px;
+    margin: 0 40px;
 }
 
 .about-us-header {
@@ -134,6 +134,9 @@ body {
 }
 
 .about-us-text {
+    padding-top: 17px;
     font-size: 1.8em;
     font-weight: 300;
+    line-height: 1.7em;
+    letter-spacing: 0.01em;
 }
