--- a/singolo2.css
+++ b/singolo2.css
@@ -63,6 +63,7 @@ body {
 .header .container-menu .menu {
     display: flex;
     justify-content: flex-start;
+    margin-left: 1px;
     list-style-type: none;
 }
 
@@ -204,6 +205,8 @@ body {
     font-size: 3em;
     font-weight: 900;
     text-transform: capitalize;
+    letter-spacing: -0.007em;
+    text-align: justify;
     color: #666d89;
     overflow: hidden;
 }
@@ -213,7 +216,7 @@ body {
     font-size: 1.8em;
     font-weight: 300;
     line-height: 1.7em;
-    letter-spacing: 0.01em;
+    text-align: justify;
     overflow: hidden;
 }
 
@@ -235,6 +238,7 @@ body {
 .about-us-info .portrait {
     width: 300px;
     height: 300px;
+    overflow: hidden;
 }
 
 #desmond-miles {
@@ -246,6 +250,7 @@ body {
     font-size: 1.8em;
     font-weight: 900;
     letter-spacing: -0.01em;
+    text-align: justify;
     color: #666d89;
     text-transform: capitalize;
     overflow: hidden;
@@ -255,8 +260,9 @@ body {
     padding-top: 9px;
     font-size: 1.2em;
     font-weight: 400;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.026em;
     line-height: 1.74em;
+    text-align: justify;
     color: #767e9e;
     overflow: hidden;
 }
