--- a/singolo2.css
+++ b/singolo2.css
@@ -6,11 +6,12 @@
 body {
     width: 1020px;
     height: auto;
+    margin: 0 auto;
     font-size: 10px;
 }
 
 .header {
-    height: 196px;
+    height: 186px;
     background-color: #2d303a;
 }
 
@@ -27,7 +28,7 @@ body {
 }
 
 .gallery {
-    height: 674px;
+    height: 684px;
     border-bottom: 6px solid #323746;
     background-color: #2d303a;
 }
@@ -56,7 +57,7 @@ body {
 }
 
 .header .container-menu {
-    height: 46px;
+    height: 36px;
     padding-top: 5px;
 }
 
@@ -111,17 +112,17 @@ body {
     display: flex;
     align-content: space-between;
     justify-content: space-between;
-    margin: 0 40px 0 40px;
+    width: 960px;
+    height: 621px;
+    margin: 0 30px 0 30px;
     flex-wrap: wrap;
-    width: 940px;
-    height: 601px;
     overflow: hidden;
 }
 
 .layout-4-columns .gallery-image {
-
     width: 220px;
     height: 187px;
+    margin: 10px;
     overflow: hidden;
 }
 
@@ -202,6 +203,7 @@ body {
 }
 
 .about-us-header {
+    height: 32px;
     font-size: 3em;
     font-weight: 900;
     text-transform: capitalize;
@@ -212,7 +214,8 @@ body {
 }
 
 .about-us-text {
-    padding-top: 17px;
+    height: 82px;
+    padding-top: 21px;
     font-size: 1.8em;
     font-weight: 300;
     line-height: 1.7em;
@@ -246,6 +249,7 @@ body {
 }
 
 .about-us-info .info-name {
+    height: 37px;
     padding-top: 15px;
     font-size: 1.8em;
     font-weight: 900;
@@ -257,6 +261,7 @@ body {
 }
 
 .about-us-info .info-text {
+    height: 50px;
     padding-top: 9px;
     font-size: 1.2em;
     font-weight: 400;
