--- a/singolo2.css
+++ b/singolo2.css
@@ -1,301 +1,307 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 body {
-    width: 1020px;
-    height: auto;
-    margin: 0 auto;
-    font-size: 10px;
+  width: 1020px;
+  height: auto;
+  margin: 0 auto;
+  font-size: 10px;
 }
 
 .header {
-    height: 186px;
-    background-color: #2d303a;
+  height: 186px;
+  background-color: #2d303a;
 }
 
-.menu .menu-item, .header .logo .logo-name, .header .logo .header-text, .about-us-content .about-us-header, .about-us-content .about-us-text, .about-us-info .info-name {
-    font-family: Lato, Verdana, sans-serif;
+.menu .menu-item,
+.header .logo .logo-name,
+.header .logo .header-text,
+.about-us-content .about-us-header,
+.about-us-content .about-us-text,
+.about-us-info .info-name {
+  font-family: Lato, Verdana, sans-serif;
 }
 
-.menu .menu-item, .header .logo .logo-name {
-    text-transform: capitalize;
+.menu .menu-item,
+.header .logo .logo-name {
+  text-transform: capitalize;
 }
 
-.menu-item, .logo, .about-us-text {
-    color: #767e9e;
+.menu-item,
+.logo,
+.about-us-text {
+  color: #767e9e;
 }
 
 .gallery {
-    height: 684px;
-    border-bottom: 6px solid #323746;
-    background-color: #2d303a;
+  height: 684px;
+  border-bottom: 6px solid #323746;
+  background-color: #2d303a;
 }
 
 .header .logo {
-    width: 940px;
-    height: 150px;
-    margin-left: 41px;
+  width: 940px;
+  height: 150px;
+  margin-left: 41px;
 }
 
 .header .logo .logo-name {
-    position: relative;
-    top: 60px;
-    height: 32px;
-    font-size: 3em;
-    overflow: hidden;
+  position: relative;
+  top: 60px;
+  height: 32px;
+  font-size: 3em;
+  overflow: hidden;
 }
 
 .header .logo .header-text {
-    position: relative;
-    top: 86px;
-    height: 28px;
-    font-size: 1.8em;
-    letter-spacing: -0.013em;
-    overflow: hidden;
+  position: relative;
+  top: 86px;
+  height: 28px;
+  font-size: 1.8em;
+  letter-spacing: -0.013em;
+  overflow: hidden;
 }
 
 .header .container-menu {
-    height: 36px;
-    padding-top: 5px;
+  height: 36px;
+  padding-top: 5px;
 }
 
 .header .container-menu .menu {
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 1px;
-    list-style-type: none;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 1px;
+  list-style-type: none;
 }
 
 .menu-item {
-    height: 22px;
-    margin-right: 10px;
-    padding-top: 2px;
-    text-align: center;
-    font-size: 1.2em;
-    border: 1px solid #666d89;
-    border-radius: 5px;
-    font-weight: 400;
-    overflow: hidden;
+  height: 22px;
+  margin-right: 10px;
+  padding-top: 2px;
+  text-align: center;
+  font-size: 1.2em;
+  border: 1px solid #666d89;
+  border-radius: 5px;
+  font-weight: 400;
+  overflow: hidden;
 }
 
 .menu-item:hover {
-    cursor: pointer;
-    border-color: #dedede;
+  cursor: pointer;
+  border-color: #dedede;
 }
 
 .menu-item:active {
-    color: #dedede;
-    border-color: #dedede;
+  color: #dedede;
+  border-color: #dedede;
 }
 
 #all-menu {
-    flex-basis: 29px;
-    color: #dedede;
-    border-color: #dedede;
+  flex-basis: 29px;
+  color: #dedede;
+  border-color: #dedede;
 }
 
 #web-design-menu {
-    flex-basis: 78px;
+  flex-basis: 78px;
 }
 
 #graphic-design-menu {
-    flex-basis: 93px;
+  flex-basis: 93px;
 }
 
 #artwork-menu {
-    flex-basis: 57px;
+  flex-basis: 57px;
 }
 
 .gallery .layout-4-columns {
-    display: flex;
-    align-content: space-between;
-    justify-content: space-between;
-    width: 960px;
-    height: 621px;
-    margin: 0 30px 0 30px;
-    flex-wrap: wrap;
-    overflow: hidden;
+  display: flex;
+  align-content: space-between;
+  justify-content: space-between;
+  width: 960px;
+  height: 621px;
+  margin: 0 30px 0 30px;
+  flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .layout-4-columns .gallery-image {
-    width: 220px;
-    height: 187px;
-    margin: 10px;
-    overflow: hidden;
+  width: 220px;
+  height: 187px;
+  margin: 10px;
+  overflow: hidden;
 }
 
 .gallery-image img {
-    position: relative;
+  position: relative;
 }
 
 #image01 {
-    right: 8px;
-    bottom: 11px;
+  right: 8px;
+  bottom: 11px;
 }
 
 #image02 {
-    right: 82px;
-    bottom: 43px;
+  right: 82px;
+  bottom: 43px;
 }
 
 #image03 {
-    right: 11px;
-    bottom: 1px;
+  right: 11px;
+  bottom: 1px;
 }
 
 #image04 {
-    right: 24px;
-    bottom: 2px;
+  right: 24px;
+  bottom: 2px;
 }
 
 #image05 {
-    right: 10px;
-    bottom: 16px;
+  right: 10px;
+  bottom: 16px;
 }
 
 #image06 {
-    right: 16px;
-    bottom: 4px;
+  right: 16px;
+  bottom: 4px;
 }
 
 #image07 {
-    right: 31px;
-    bottom: 39px;
+  right: 31px;
+  bottom: 39px;
 }
 
 #image08 {
-    right: 24px;
-    bottom: 32px;
+  right: 24px;
+  bottom: 32px;
 }
 
 #image09 {
-    right: 16px;
-    bottom: 2px;
+  right: 16px;
+  bottom: 2px;
 }
 
 #image10 {
-    right: 141px;
-    bottom: 113px;
+  right: 141px;
+  bottom: 113px;
 }
 
 #image11 {
-    right: 144px;
-    bottom: 175px;
+  right: 144px;
+  bottom: 175px;
 }
 
 #image12 {
-    right: 36px;
-    bottom: 60px;
+  right: 36px;
+  bottom: 60px;
 }
 
 .about-us {
-    height: 734px;
-    border-bottom: 6px solid #ffffff;
-    background-color: #f2f2f2;
+  height: 734px;
+  border-bottom: 6px solid #ffffff;
+  background-color: #f2f2f2;
 }
 
 .about-us-content {
-    position: relative;
-    top: 60px;
-    margin: 0 40px;
+  position: relative;
+  top: 60px;
+  margin: 0 40px;
 }
 
 .about-us-header {
-    height: 32px;
-    font-size: 3em;
-    font-weight: 900;
-    text-transform: capitalize;
-    letter-spacing: -0.007em;
-    text-align: justify;
-    color: #666d89;
-    overflow: hidden;
+  height: 32px;
+  font-size: 3em;
+  font-weight: 900;
+  text-transform: capitalize;
+  letter-spacing: -0.007em;
+  text-align: justify;
+  color: #666d89;
+  overflow: hidden;
 }
 
 .about-us-text {
-    height: 82px;
-    padding-top: 21px;
-    font-size: 1.8em;
-    font-weight: 300;
-    line-height: 1.7em;
-    text-align: justify;
-    overflow: hidden;
+  height: 82px;
+  padding-top: 21px;
+  font-size: 1.8em;
+  font-weight: 300;
+  line-height: 1.7em;
+  text-align: justify;
+  overflow: hidden;
 }
 
 .about-us .layout-3-columns {
-    position: relative;
-    top: 104px;
-    display: flex;
-    justify-content: space-between;
-    height: auto;
-    margin: 0 40px;
+  position: relative;
+  top: 104px;
+  display: flex;
+  justify-content: space-between;
+  height: auto;
+  margin: 0 40px;
 }
 
 .about-us-info {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
 }
 
 .about-us-info .portrait {
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
 }
 
 #desmond-miles {
-    width: 302px;
+  width: 302px;
 }
 
 .about-us-info .info-name {
-    height: 37px;
-    padding-top: 15px;
-    font-size: 1.8em;
-    font-weight: 900;
-    letter-spacing: -0.01em;
-    text-align: justify;
-    color: #666d89;
-    text-transform: capitalize;
-    overflow: hidden;
+  height: 37px;
+  padding-top: 15px;
+  font-size: 1.8em;
+  font-weight: 900;
+  letter-spacing: -0.01em;
+  text-align: justify;
+  color: #666d89;
+  text-transform: capitalize;
+  overflow: hidden;
 }
 
 .about-us-info .info-text {
-    height: 50px;
-    padding-top: 9px;
-    font-size: 1.2em;
-    font-weight: 400;
-    letter-spacing: 0.026em;
-    line-height: 1.74em;
-    text-align: justify;
-    color: #767e9e;
-    overflow: hidden;
+  height: 50px;
+  padding-top: 9px;
+  font-size: 1.2em;
+  font-weight: 400;
+  letter-spacing: 0.026em;
+  line-height: 1.74em;
+  text-align: justify;
+  color: #767e9e;
+  overflow: hidden;
 }
 
 .info-contact {
-    display: flex;
-    justify-content: space-between;
-    width: 152px;
-    padding-top: 24px;
+  display: flex;
+  justify-content: space-between;
+  width: 152px;
+  padding-top: 24px;
 }
 
 .button-icon {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    border: 1px solid #666d89;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid #666d89;
 }
 
 .button-icon img {
-    width: 14px;
-    height: 14px;
-    margin-top: 4px;
-    margin-left: 1px;
+  width: 14px;
+  height: 14px;
+  margin-top: 4px;
+  margin-left: 1px;
 }
 
 .button-icon:hover {
-    cursor: pointer;
-    border: 2px solid #666d89
+  cursor: pointer;
+  border: 2px solid #666d89
 }
-
-
