--- a/singolo3.css
+++ b/singolo3.css
@@ -6,6 +6,7 @@
 body {
   width: 1020px;
   height: auto;
+  margin: 0 auto;
   font-family: Lato, Verdana, sans-serif;
   font-size: 10px;
 }
@@ -36,11 +37,10 @@ body {
   font-weight: 300;
   line-height: 30px;
   text-align: justify;
-  letter-spacing: -0.013em;
 }
 
 .main {
-  height: 431px;
+  height: 445px;
   border-bottom: 6px solid #ea676b;
 }
 
@@ -57,11 +57,14 @@ body {
   width: 619px;
   height: 38px;
   margin: 8px;
-  padding: 10px;
+  padding-left: 14px;
+  font-size: 1.2em;
+  line-height: 22px;
   color: #f48c8f;
   background-color: #d6564f;
   border: none;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 ::placeholder {
@@ -77,11 +80,12 @@ body {
 
 #describe {
   height: 202px;
+  padding-top: 7px;
   resize: none;
 }
 
 .contact-info {
-  padding: 6px 14px 0 12px;
+  padding: 6px 13px 0 13px;
 }
 
 .contact-info-head {
@@ -92,7 +96,7 @@ body {
 }
 
 .contact-info-text {
-  padding-top: 7px;
+  padding-top: 8px;
   font-size: 1.2em;
   font-weight: 400;
   line-height: 22px;
@@ -100,26 +104,76 @@ body {
 }
 
 .contact {
-  padding: 1px;
+  padding-top: 21px;
+}
+
+.contact-data {
+  display: flex;
+  height: 21px;
+}
+
+.contact-img {
+  width: auto;
+  height: auto;
 }
 
 .contact-text {
+  width: auto;
+  height: auto;
   font-size: 1.2em;
   font-weight: 400;
   line-height: 22px;
 }
 
-.contact-data {
-  display: block;
+#location {
+  margin: 5px 13px 0 3px;
 }
 
 #phone {
+  margin: 5px 11px 0 1px;
+}
+
+#mail {
+  margin: 9px 10px 0 0;
 }
 
 .footer {
+  display: flex;
   width: inherit;
   height: 76px;
   background-color: #2d303a;
+}
+
+.copyright {
+  align-self: center;
+  width: auto;
+  height: auto;
+  margin-left: 40px;
+  font-size: 1.2em;
+}
+
+.footer-icons {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  width: 152px;
+  height: 32px;
+  margin-left: auto;
+  margin-right: 40px;
+}
+
+.footer-icon {
+  text-align: center;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #666d89;
+  border-radius: 50%;
+}
+
+.footer-icon img {
+  width: 14px;
+  height: 14px;
+  margin-top: 8px;
 }
 
 .color-white {
@@ -128,4 +182,8 @@ body {
 
 .color-blue {
   color: #666d89;
+}
+
+.footer-icon:hover {
+  border: 2px solid #666d89;
 }
