--- a/singolo3.css
+++ b/singolo3.css
@@ -26,6 +26,7 @@ body {
 }
 
 .header-name {
+  height: 36px;
   font-size: 3em;
   font-weight: 900;
   letter-spacing: -0.005em;
@@ -33,6 +34,7 @@ body {
 }
 
 .header-text {
+  height: 78px;
   padding-top: 18px;
   font-size: 1.8em;
   font-weight: 300;
@@ -100,6 +102,7 @@ body {
 }
 
 .contact-info-head {
+  height: 22px;
   font-size: 1.8em;
   font-weight: 900;
   letter-spacing: -0.007em;
@@ -108,6 +111,7 @@ body {
 }
 
 .contact-info-text {
+  height: 94px;
   padding-top: 8px;
   font-size: 1.2em;
   font-weight: 400;
@@ -117,7 +121,7 @@ body {
 }
 
 .contact {
-  padding-top: 20px;
+  padding-top: 22px;
 }
 
 .contact-data {
