--- a/style.css
+++ b/style.css
@@ -104,14 +104,31 @@ body {
 }
 
 .slider {
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr 3fr 6fr 1fr;
-  box-sizing: inherit;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: hidden;
+    /*  box-sizing: inherit;
   align-items: center;
   height: 594px;
   background-color: #ef6c64;
-  border-bottom: 6px solid #ea676b;
+  border-bottom: 6px solid #ea676b;*/
+}
+
+.slider-wrapper {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 3fr 6fr 1fr;
+    box-sizing: inherit;
+    align-items: center;
+    width: 1020px;
+    height: 594px;
+    background-color: #ef6c64;
+    border-bottom: 6px solid #ea676b;
+}
+
+#slide2 {
+    /*display: none;*/
 }
 
 .arrow {
@@ -120,6 +137,8 @@ body {
   height: 50px;
   margin-top: 19px;
   text-align: center;
+  border: none;
+  background-color: inherit;
 }
 
 .arrow-left {
@@ -130,7 +149,7 @@ body {
   margin-left: 30px;
 }
 
-.arrow img:hover {
+.arrow:hover {
   cursor: pointer;
   transform: scale(1.4);
 }
@@ -196,7 +215,7 @@ body {
 
 .screen-horizontal img {
   position: absolute;
-  left: -119px;
+  left: -180px;
   bottom: -125px;
   box-sizing: inherit;
   transform: rotate(-90deg);
@@ -405,8 +424,6 @@ body {
 
 #all-menu {
   flex-basis: 29px;
-  color: #dedede;
-  border-color: #dedede;
 }
 
 #web-design-menu {
@@ -803,6 +820,7 @@ body {
 }
 
 .footer-icon:hover {
+  cursor: pointer;
   border: 2px solid #666d89;
 }
 
