--- a/style.css
+++ b/style.css
@@ -107,36 +107,43 @@ body {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    height: 600px;
     overflow: hidden;
-    /*  box-sizing: inherit;
-  align-items: center;
+}
+
+.slider-list {
+  position: absolute;
+  display: flex;
   height: 594px;
-  background-color: #ef6c64;
-  border-bottom: 6px solid #ea676b;*/
 }
 
 .slider-wrapper {
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 3fr 6fr 1fr;
     box-sizing: inherit;
-    align-items: center;
     width: 1020px;
-    height: 594px;
-    background-color: #ef6c64;
-    border-bottom: 6px solid #ea676b;
+    height: 600px;
+}
+
+#slide1 {
+  display: grid;
+  grid-template-columns: 3fr 6fr;
+  align-items: center;
+  background-color: #ef6c64;
+  border-bottom: 6px solid #ea676b;
 }
 
 #slide2 {
-    /*display: none;*/
+  background-color: #1fb157;
 }
 
 .arrow {
+  z-index: 30;
   box-sizing: inherit;
   width: 30px;
   height: 50px;
   margin-top: 19px;
   text-align: center;
+  align-self: center;
   border: none;
   background-color: inherit;
 }
@@ -146,7 +153,10 @@ body {
 }
 
 .arrow-right {
-  margin-left: 30px;
+  position: relative;
+  bottom: 3px;
+  right: 33px;
+  justify-self: end;
 }
 
 .arrow:hover {
@@ -162,14 +172,12 @@ body {
 
 .phone-vertical {
   box-sizing: inherit;
-  margin-top: -4px;
-  margin-left: 19px;
+  margin-left: 112px;
 }
 
 .phone-horizontal {
   box-sizing: inherit;
-  margin-top: -6px;
-  margin-left: 175px;
+  margin-left: 194px;
 }
 
 .shadow {
@@ -700,7 +708,7 @@ body {
   color: #f48c8f;
 }
 
-#submit-button {
+.submit-button {
   width: 80px;
   height: 28px;
   margin: 8px;
@@ -710,7 +718,7 @@ body {
   border-radius: 5px;
 }
 
-#submit-button:hover {
+.submit-button:hover {
   cursor: pointer;
   background-color: #aa4742;
 }
@@ -778,6 +786,51 @@ body {
 
 #mail {
   margin: 9px 10px 0 0;
+}
+
+.submit-info {
+  position: absolute;
+  top: 3100px;
+  left: 25%;
+  padding: 10px;
+  height: auto;
+  width: auto;
+  font-size: 1.2rem;
+  color: #f48c8f;
+  background-color: #f06c64;
+  border: 4px solid #943d38;
+  border-radius: 10px;
+  /* display: none; */
+}
+
+.submit {
+  
+}
+
+.submit-info-header {
+
+}
+
+.submit-info-thema {
+  height: auto;
+  max-height: 100px;
+  margin: 5px;
+  padding: 10px;
+  color: #f48c8f;
+  background-color: #d6564f;
+  border-radius: 5px;
+  overflow: hidden; 
+}
+
+.submit-info-description {
+  max-width: 400px;
+  max-height: 100px;
+  margin: 5px;
+  padding: 10px;
+  color: #f48c8f;
+  background-color: #d6564f;
+  border-radius: 5px;
+  overflow: hidden;  
 }
 
 .footer {
