--- a/style.css
+++ b/style.css
@@ -130,10 +130,12 @@ body {
   align-items: center;
   background-color: #ef6c64;
   border-bottom: 6px solid #ea676b;
+  /* display: none; */
 }
 
-#slide2 {
-  background-color: #1fb157;
+#slide2 { 
+  background-color: #648BF0;
+
 }
 
 .arrow {
@@ -208,9 +210,7 @@ body {
 }
 
 .screen-vertical img {
-  position: absolute;
-  left: -14px;
-  bottom: -112px;
+  position: relative;
   box-sizing: inherit;
 }
 
@@ -222,9 +222,9 @@ body {
 }
 
 .screen-horizontal img {
-  position: absolute;
-  left: -180px;
-  bottom: -125px;
+  position: relative;
+  top: 72px;
+  right: 73px;
   box-sizing: inherit;
   transform: rotate(-90deg);
 }
