--- a/style.css
+++ b/style.css
@@ -157,7 +157,6 @@ body {
 }
 
 #phone-small-left {
-  position: relative;
   top: 9px;
   left: 17px;
   transform-origin: right;
@@ -165,7 +164,6 @@ body {
 }
 
 #phone-small-right {
-  position: relative;
   top: 9px;
   right: 19px;
   transform-origin: left;
@@ -206,6 +204,7 @@ body {
 }
 
 .phone {
+    position:relative;
   box-sizing: inherit;
   width: 240px;
   height: 483px;
@@ -400,7 +399,8 @@ body {
   scroll-margin-top: 90px;
 }
 
-.portfolio-navigation .menu-item, .portfolio-header .portfolio-name {
+.menu-item, 
+.portfolio-name {
   text-transform: capitalize;
 }
 
@@ -414,13 +414,13 @@ body {
   background-color: #2d303a;
 }
 
-.portfolio .portfolio-header {
+.portfolio-header {
   width: 940px;
   height: 150px;
   margin-left: 41px;
 }
 
-.portfolio .portfolio-header .portfolio-name {
+.portfolio-name {
   position: relative;
   top: 60px;
   height: 32px;
@@ -428,12 +428,12 @@ body {
   overflow: hidden;
 }
 
-.portfolio .portfolio-header .portfolio-header-text {
+.portfolio-header-text {
   position: relative;
   top: 86px;
   height: 28px;
   font-size: 1.8em;
-  letter-spacing: -0.013em;
+  line-height: 30px;
   overflow: hidden;
 }
 
@@ -442,7 +442,7 @@ body {
   padding-top: 5px;
 }
 
-.portfolio .portfolio-navigation-cotainer .portfolio-navigation {
+.portfolio-navigation {
   display: flex;
   justify-content: flex-start;
   margin-left: 1px;
@@ -502,7 +502,7 @@ body {
   overflow: hidden;
 }
 
-.layout-4-columns .gallery-image {
+.gallery-image {
   width: 230px;
   height: 197px;
   margin: 5px;
@@ -570,10 +570,6 @@ body {
   overflow: hidden;
 }
 
-#desmond-miles {
-  width: 302px;
-}
-
 .about-us-info .about-us-name {
   height: 37px;
   padding-top: 15px;
@@ -627,14 +623,11 @@ body {
 
 /* input-form */
 
-.quote-header, .quote-main {
-  width: inherit;
-  background-color: #f06c64;
-}
-
 .quote-header {
-  height: 209px;
-  scroll-margin-top: 90px;
+    width: inherit;
+    height: 209px;
+    background-color: #f06c64;
+    scroll-margin-top: 90px;
 }
 
 .quote-container {
@@ -659,8 +652,10 @@ body {
 }
 
 .quote-main {
-  height: 445px;
-  border-bottom: 6px solid #ea676b;
+    width: inherit;
+    height: 445px;
+    background-color: #f06c64;
+    border-bottom: 6px solid #ea676b;
 }
 
 .quote-main-container {
@@ -696,13 +691,16 @@ body {
 }
 
 .submit-button {
-  width: 80px;
-  height: 28px;
-  margin: 8px;
-  color: #f48c8f;
-  background-color: #d6564f;
-  border: none;
-  border-radius: 5px;
+    width: 136px;
+    height: 38px;
+    margin: 8px;
+    font-size: 1.4em;
+    font-weight: bold;
+    color: #886A30;
+    background-color: #FBC65F;
+    border: none;
+    border-radius: 5px;
+    text-transform: uppercase;
 }
 
 .submit-button:hover {
@@ -718,7 +716,7 @@ body {
 }
 
 .quote-contact-info {
-  padding: 6px 13px 0 13px;
+  padding: 6px 0 0 13px;
 }
 
 .contact-info-head {
@@ -873,50 +871,200 @@ body {
   color: #f06c64;
 }
 
-@media only screen and (max-width: 1020px) {
-  body {
-    width: 768px;
-  }
-  .header {
-    width: 768px;
-  }
-  .slider {
-    height: 542px;
-  }
-  .slider-list {
-    height: 542px;
-  }
-  .slider-wrapper {
-    width: 768px;
-    height: inherit;
-  }
-  #phone-vertical-slide1 {
-    top: 55px;
-    right: 53px;
-    transform: scale(0.75);
-  }
-  #phone-horizontal-slide1 {
-    top: 55px;
-    right: 168px;
-    transform: scale(0.75) rotate(90deg);
-  }
-  .layout-3-column {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-  }
-  .services {
-    height: 675px;
-  }
+@media only screen and (max-width: 1019px) {
+    body {
+        width: 768px;
+    }
 
+    .header {
+        width: 768px;
+    }
 
+    .slider {
+        height: 542px;
+    }
 
-  .layout-4-columns {
-    width: 880px;
-    height: 621px;
-    margin: 0 30px 0 30px;
-    flex-wrap: wrap;
-    overflow: hidden;
-  }
+    .slider-list {
+        height: 542px;
+    }
+
+    .slider-wrapper {
+        width: 768px;
+        height: inherit;
+    }
+
+    #phone-vertical-slide1 {
+        top: 55px;
+        right: 53px;
+        transform: scale(0.75);
+    }
+
+    #phone-horizontal-slide1 {
+        top: 55px;
+        right: 168px;
+        transform: scale(0.75) rotate(90deg);
+    }
+
+    #phone-central {
+        top: 49px;
+        transform: scale(0.8);
+    }
+
+    #phone-small-left {
+        top: 47px;
+        left: 41px;
+    }
+
+    #phone-small-right {
+        top: 47px;
+        right: 43px;
+    }
+
+    .small:not(.screen) {
+        transform: scale(0.48);
+    }
+
+    .layout-3-column {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .services {
+        height: 675px;
+    }
+
+    .portfolio {
+        height: 230px;
+    }
+
+    .portfolio-header {
+        width: 727px;
+        height: 180px;
+        margin-left: 41px;
+    }
+
+    .portfolio-header-text {
+        width: 695px;
+        height: 60px;
+    }
+
+    .gallery {
+        height: 871px;
+    }
+
+    .layout-4-columns {
+        width: 688px;
+        height: 782px;
+    }
+
+    .gallery-image {
+        width: 216px;
+        height: 183px;
+        margin: 5px;
+        padding: 5px;
+        overflow: hidden;
+    }
+
+    .about-us {
+        height: 669px;
+        border-bottom: 5px solid #ffffff;
+        background-color: #f2f2f2;
+        scroll-margin-top: 90px;
+    }
+
+    .about-us-content h {
+        height: 40px;
+    }
+
+    .about-us-content p {
+        height: 114px;
+        padding-top: 14px;
+    }
+
+    .about-us-info {
+        width: 219px;
+    }
+
+        .about-us-info .portrait {
+            width: 219px;
+            height: 219px;
+        }
+
+            .about-us-info .portrait img {
+                width: 219px;
+                height: 219px;
+            }
+
+        .about-us-info .about-us-text {
+            width: 219px;
+            height: 70px;
+        }
+
+        .about-us-info .about-us-contact {
+            padding-top: 5px;
+        }
+
+    .quote-header {
+        width: 768px;
+        height: 214px;
+    }
+
+    .quote-container {
+        height: 214px;
+        padding: 53px 40px 0 42px;
+    }
+
+        .quote-container h1 {
+            width: 217px;
+            height: 40px;
+        }
+
+        .quote-container p {
+            padding-top: 14px;
+            width: 707px;
+            height: 110px;
+        }
+
+    .quote-main-container {
+        grid-template-columns: 490px 328px;
+    }
+
+    .input-form {
+        width: 442px;
+        height: 38px;
+        margin: 6px;
+    }
+
+    #describe {
+        width: 442px;
+    }
+
+    .quote-contact-info {
+        padding-left: 19px;
+        width: 240px;
+    }
+
+    .contact-info-text {
+        width: 221px;
+        height: 150px;
+    }
+
+    .quote-contact {
+        padding-top: 0;
+    }
 }
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 767px) {
+    body {
+        width: 375px;
+    }
+
+    .header {
+        width: 375px;
+    }
+
+    .header-logo {
+        margin-left: 0;
+        align-self: center;
+    }
+}
